RAIN-1477 : DSS Fix for the Alignment in piecart on drillthrough

--- a/web/dss-dashboard/src/App.css
+++ b/web/dss-dashboard/src/App.css
@@ -376,7 +376,6 @@ h6 span {
     margin-bottom: 10px;
     text-align: left;
     display: flex;
-    width: min-content;
 }
 
 .pieFilterChipWrap .chipWrap {
